# xlviews

./: .gitignore  .pre-commit-config.yaml  README.md  lcov.info  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish.yaml
src/xlviews/: __init__.py  axes.py  colors.py  common.py  config.py  decorators.py  dist.py  distframe.py  element.py  formula.py  frame.py  grid.py  group.py  groupby.py  grouper.py  main.py  modify.py  plot.py  range.py  series.py  sheetframe.py  stats.py  statsframe.py  style.py  table.py  testing.py  utils.py  xlviews.toml
tests/: conftest.py  test_axes.py  test_client.py  test_colors.py  test_common.py  test_config.py  test_dist.py  test_formula.py  test_frame.py  test_main.py  test_range.py  test_style.py  test_table.py  test_utils.py
tests/agg/: test_multi_index.py  test_normal.py
tests/axes/: __init__.py  conftest.py  test_axes.py  test_position.py  test_series.py  test_style.py
tests/benchmark/: test_address.py  test_sheet_frame.py
tests/chart/: test_grid.py  test_style.py
tests/core/: test_address.py  test_formula.py  test_index.py  test_range.py  test_range_collection.py  test_style.py
tests/dataframes/: test_colorbar.py  test_groupby.py  test_heat_frame.py  test_style.py  test_table.py
tests/dist_frame/: conftest.py  test_columns.py  test_dist_func.py  test_frame.py
tests/distframe/: conftest.py  test_columns.py  test_frame.py
tests/figure/: test_facet.py  test_grid.py  test_groupby.py  test_palette.py  test_plot.py  test_style.py
tests/frame/: test_basic.py  test_curve.py  test_formula.py  test_index_name.py  test_multi_column.py  test_multi_index.py  test_multi_index_column.py  test_noindex.py  test_normal.py  test_style.py  test_utils.py  test_wide_column.py
tests/grouby/: test_index.py
tests/group/: __init__.py  conftest.py  test_curve.py  test_index.py  test_normal.py  test_range.py
tests/grouper/: __init__.py  test_curve.py  test_index.py  test_normal.py  test_range.py
tests/heatmap/: __init__.py
tests/modify/: test_delete.py  test_move.py
tests/pivot/: conftest.py  test_table.py
tests/plot/: __init__.py  test_grid.py  test_groupby.py
tests/range/: test_address.py  test_formula.py  test_range.py  test_range_collection.py  test_style.py
tests/series/: __init__.py  test_property.py  test_style.py
tests/sheet_frame/: test_curve.py  test_formula.py  test_multi_column.py  test_multi_index.py  (+5 more)
(+160 files in other folders)
