[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "xlviews"
version = "0.3.3"
description = "DataFrames for Excel"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = ["numpy>=2", "pandas>=2", "xlwings>=0.33"]

[project.urls]
Documentation = "https://github.com/daizutabi/xlviews"
Source = "https://github.com/daizutabi/xlviews"
Issues = "https://github.com/daizutabi/xlviews/issues"

[dependency-groups]
dev = [
  "basedpyright>=1.37.3",
  "pandas-stubs>=3.0.0.260204",
  "prek>=0.3.1",
  "pytest-benchmark>=5.2.3",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=7.0.0",
  "pytest-randomly>=4.0.1",
  "pytest-skip-slow>=0.0.5",
  "pytest>=9.0.1",
  "ruff>=0.15.0",
  "scipy-stubs>=1.17.0",
  "scipy>=1.17.0",
]

[tool.pytest.ini_options]
markers = ["app: mark test as app"]
addopts = [
  "--benchmark-columns=min,mean,max",
  "--benchmark-skip",
  "--cov-report=lcov:lcov.info",
  "--cov=xlviews",
  "--doctest-modules",
  "--strict-markers",
  "-p no:faulthandler",
]

[tool.coverage.report]
exclude_lines = ["no cov", "raise NotImplementedError", "if TYPE_CHECKING:"]
omit = ["src/xlviews/testing/*"]
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
preview = true
select = ["ALL"]
unfixable = ["F401"]
ignore = [
  "ANN401",
  "CPY001",
  "D",
  "DOC201",
  "DOC402",
  "DOC501",
  "DOC502",
  "ERA001",
  "FBT001",
  "FBT002",
  "PLR0913",
  "PLR0917",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG", "D", "PLC2701", "PLR2004", "PT011", "S", "SLF001"]
"src/xlviews/testing/*" = ["T201"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
preview = true

[tool.basedpyright]
include = ["src", "tests"]
reportAny = false
reportExplicitAny = false
reportImportCycles = false
reportImplicitOverride = false
reportUnusedCallResult = false
reportIncompatibleMethodOverride = false
